--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,33 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
+
 <head>
-    <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Spring Boot Thymeleaf + Spring Security</title>
+
 </head>
 <body>
-<a th:href="@{employees}">Employees</a><br/>
-<a th:href="@{employees/addEmployee}">Add new Employee</a><br/>
-<a th:href="@{departments}">Departments</a><br/>
-<a th:href="@{departments/addDepartment}">Add new Department</a><br/>
-<a th:href="@{positions}">Positions in company</a><br/>
-<a th:href="@{positions/addPosition}">Add new Positions in company</a><br/>
+<div class="container">
+
+    <div class="starter-template">
+        <a th:href="@{employees}">Employees</a><br/>
+        <a th:href="@{employees/addEmployee}">Add new Employee</a><br/>
+        <a th:href="@{departments}">Departments</a><br/>
+        <a th:href="@{departments/addDepartment}">Add new Department</a><br/>
+        <a th:href="@{positions}">Positions in company</a><br/>
+        <a th:href="@{positions/addPosition}">Add new Positions in company</a><br/>
+        <a th:href="@{products}">Products</a><br/>
+        <a th:href="@{products/addProduct}">Add new Product</a><br/>
+        <a th:href="@{drawings}">Drawings</a><br/>
+        <a th:href="@{drawings/addDrawing}">Add new Drawing</a><br/>
+    </div>
+    <span sec:authorize="isAuthenticated()">| Logged user: <span sec:authorize="name"></span> |
+                Roles: <span sec:authorize="principal.authorities"></span> |
+                <a th:href="@{/logout}">Sign Out</a>
+            </span>
+
+</div>
+
 </body>
 </html>
