--- a/src/main/resources/templates/product/addProduct.html
+++ b/src/main/resources/templates/product/addProduct.html
@@ -4,6 +4,7 @@
     <title>Add new product</title>
 </head>
 <body>
+<div th:replace="include/header :: header"></div>
 <h3>Add new product</h3>
 <form action="/products" method="post">
     <table>
@@ -20,6 +21,6 @@
         </td>
     </tr>
 </form>
-
+<div th:replace="include/footer :: footer"></div>
 </body>
 </html>
