--- a/src/main/resources/templates/product/products.html
+++ b/src/main/resources/templates/product/products.html
@@ -6,20 +6,11 @@
 
     <title>Spring Boot Thymeleaf Hello World Example</title>
 
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/static/css/main.css}"/>
-
 </head>
 
 <body>
-<header>
-    <h1>О влиянии металлических инструментов
-        на инопланетные организмы</h1>
-    <p>Автор: Гордон Фримен</p>
-</header>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Example.com</a>
-</nav>
+
+<div th:replace="include/header :: header"></div>
 
 <main role="main" class="container">
 
@@ -40,8 +31,6 @@
     </table>
 
 </main>
-<!-- /.container -->
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
+<div th:replace="include/footer :: footer"></div>
 </body>
 </html>
