--- a/src/main/resources/templates/department/addDepartment.html
+++ b/src/main/resources/templates/department/addDepartment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="include/head :: head">
     <title>Add new department</title>
 </head>
 <body>
