--- a/src/main/resources/templates/department/departments.html
+++ b/src/main/resources/templates/department/departments.html
@@ -1,11 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Spring Boot Thymeleaf Hello World Example</title>
-
+<head th:replace="include/head :: head">
+    <title>Departments</title>
 </head>
 
 <body>
