--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 
 
-<head>
-    <title>Spring Boot Thymeleaf + Spring Security</title>
 
+<head th:replace="include/head :: head">
+    <title>Design_bureau</title>
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
