--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org", xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +10,25 @@
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
+
+<div>
+    <nav th:fragment="header">
+        <div>
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/products}"> | Product</a>
+            <a sec:authorize="hasAnyRole('ADMIN', 'USER')" th:href="@{/products/addProduct}"> | Add Product</a>
+            <a th:href="@{/drawings}"> | Drawings</a>
+            <a sec:authorize="hasAnyRole('ADMIN', 'USER')" th:href="@{/drawings/addDrawing}"> | Add Drawings</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/employees}"> | Employees</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/employees/addEmployee}"> | Add Employee</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}"> | Departments</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments/addDepartment}"> | Add Department</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}"> | Position In Company</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions/addPosition}"> | Add Position In Company</a>
+        </div>
+    </nav>
+
+</div>
 <div class="container">
     <form class="form-signin" method="post" action="/login">
         <h2 class="form-signin-heading">Please sign in</h2>
@@ -23,5 +42,6 @@
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
+    <div th:replace="include/footer :: footer"></div>
 </div>
 </body></html>
