--- a/src/main/resources/templates/positionInCompany/positions.html
+++ b/src/main/resources/templates/positionInCompany/positions.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="include/head :: head">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Spring Boot Thymeleaf Hello World Example</title>
+    <title>Position In Company</title>
 
 </head>
 
