--- a/src/main/resources/templates/drawing/addDrawing.html
+++ b/src/main/resources/templates/drawing/addDrawing.html
@@ -6,7 +6,7 @@
 <body>
 <div th:replace="include/header :: header"></div>
 <h3>Add new drawing</h3>
-<form action="/drawings" method="post">
+<form class="text-left" action="/drawings" method="post">
     <label>Name Product</label>
     <br>
     <select name="product">
