--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -7,54 +7,54 @@
 <div th:replace="include/header :: header"></div>
 <h3>Add new employee</h3>
 <form action="/employees" method="post">
-    <table>
-        <tr>
-            <td><label>First Name</label></td>
-            <td>
-                <input type="text" name="firstName" th:value="${employee.firstName}"/>
-            </td>
-            <td><label>Middle Name</label></td>
-            <td>
-                <input type="text" name="middleName" th:value="${employee.middleName}"/>
-            </td>
-            <td><label>Last Name</label></td>
-            <td>
-                <input type="text" name="lastName" th:value="${employee.lastName}"/>
-            </td>
-            <td><label>Phone Name</label></td>
-            <td>
-                <input type="text" name="phoneNumber" th:value="${employee.phoneNumber}"/>
-            </td>
-            <td><label>User name</label></td>
-            <td>
-                <input type="text" name="username" th:value="${user.username}"/>
-            </td>
-            <td><label>User password</label></td>
-            <td>
-                <input type="text" name="password" th:value="${user.encodePassword}"/>
-            </td>
-            <td>
-            <label> User role
-                <select name="role">
-                    <option th:each="role : ${roles}" th:text="${role}"
-                            th:value="${role}"></option>
-                </select>
-            </label>
-            </td>
-        </tr>
-    </table>
+    <label>First Name</label>
+    <br>
+    <input type="text" name="firstName" th:value="${employee.firstName}"/>
+    </br>
+    <label>Middle Name</label>
+    <br>
+    <input type="text" name="middleName" th:value="${employee.middleName}"/>
+    </br>
+    <label>Last Name</label>
+    <br>
+    <input type="text" name="lastName" th:value="${employee.lastName}"/>
+    </br>
+    <label>Phone</label>
+    <br>
+    <input type="text" name="phoneNumber" th:value="${employee.phoneNumber}"/>
+    </br>
+    <label>User Name</label>
+    <br>
+    <input type="text" name="username" th:value="${user.username}"/>
+    </br>
+    <label>User password</label>
+    <br>
+    <input type="text" name="password" th:value="${user.encodePassword}"/>
+    </br>
+    <br>
+                <label> User role
+                    <select name="role">
+                        <option th:each="role : ${roles}" th:text="${role}"
+                                th:value="${role}"></option>
+                    </select>
+                </label>
+    </br>
+    <br>
     <label>Department
         <select name="department">
             <option th:each="department : ${departments}" th:text="${department.departmentName}"
                     th:value="${department.id}"></option>
         </select>
     </label>
+    </br>
+    <br>
     <label> Position in company
         <select name="position">
             <option th:each="position : ${positions}" th:text="${position.positionName}"
                     th:value="${position.id}"></option>
         </select>
     </label>
+    </br>
     <tr>
         <td colspan="2">
             <input type="submit" value="Submit"/>
