--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -5,6 +5,8 @@
 
 <div th:fragment="footer" class="container">
     <span class="text-muted">&copy; 2020 Design_Bureau</span>
+    <a href="?lang=en">en</a> |
+    <a href="?lang=ru">ru</a>
 </div>
 
 </body>
