--- a/src/main/resources/templates/positionInCompany/addPosition.html
+++ b/src/main/resources/templates/positionInCompany/addPosition.html
@@ -11,7 +11,7 @@
         <tr>
             <td><label>Name Position</label></td>
             <td>
-                <input type="text" name="positionName" th:value="${position.positionName}"/>
+                <input type="text" name="positionName" th:value="${position.positionName}" required/>
             </td>
         </tr>
     </table>
