--- a/src/main/resources/templates/product/addProduct.html
+++ b/src/main/resources/templates/product/addProduct.html
@@ -11,12 +11,12 @@
         <tr>
             <td><label>Name Product</label></td>
             <td>
-                <input type="text" name="productName" th:value="${product.productName}"/>
+                <input type="text" name="productName" th:value="${product.productName}" required/>
             </td>
         </tr>
     </table>
     <tr>
-        <td colspan="2">
+        <td>
             <input type="submit" value="Submit"/>
         </td>
     </tr>
