--- a/src/main/resources/templates/department/addDepartment.html
+++ b/src/main/resources/templates/department/addDepartment.html
@@ -11,7 +11,7 @@
         <tr>
             <td><label>Name Department</label></td>
             <td>
-                <input type="text" name="departmentName" th:value="${department.departmentName}"/>
+                <input type="text" name="departmentName" th:value="${department.departmentName}" required/>
             </td>
         </tr>
     </table>
