--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -7,31 +7,24 @@
     <nav th:fragment="header">
         <div style="float: right">
             <form sec:authorize="!isAuthenticated()" th:action="@{/login}" method="post">
-                <button type="submit">Sign In</button>
+                <button type="submit">[[#{lang.change.login.signin}]]</button>
             </form>
         </div>
         <div style="float: right">
             <form sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
                 Hello <b>'[[${#httpServletRequest.remoteUser}]]'</b>
-                <button type="submit">Sign Out</button>
+                <button type="submit">[[#{lang.change.login.signout}]]</button>
             </form>
         </div>
-        <div>
-            <a th:href="@{/}">Home</a>
-            <a th:href="@{/products}"> | Product</a>
-            <a sec:authorize="hasAnyRole('ADMIN', 'USER')" th:href="@{/products/addProduct}"> | Add Product</a>
-            <a th:href="@{/drawings}"> | Drawings</a>
-            <a sec:authorize="hasAnyRole('ADMIN', 'USER')" th:href="@{/drawings/addDrawing}"> | Add Drawings</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/employees}"> | Employees</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}"> | Departments</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments/addDepartment}"> | Add Department</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}"> | Position In Company</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions/addPosition}"> | Add Position In Company</a>
+        <div class="text-center">
+            <a th:href="@{/}">[[#{menu.message.home}]]</a>
+            <a th:href="@{/products}"> | [[#{menu.message.product}]]</a>
+            <a th:href="@{/drawings}"> | [[#{menu.message.drawing}]]</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/employees}"> | [[#{menu.message.employee}]]</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}"> | [[#{menu.message.department}]]</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}"> | [[#{menu.message.position}]]</a>
         </div>
     </nav>
-
 </div>
-
-
 </body>
 </html>
