--- a/src/main/resources/templates/department/addDepartment.html
+++ b/src/main/resources/templates/department/addDepartment.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
-<h3>Add new department</h3>
-<form action="/departments" method="post">
+<form class="container" action="/departments" method="post">
+    <h3>Add new department</h3>
     <table>
         <tr>
             <td><label>Name Department</label></td>
