--- a/src/main/resources/templates/positionInCompany/addPosition.html
+++ b/src/main/resources/templates/positionInCompany/addPosition.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
-<h3>Add new position</h3>
-<form action="/positions" method="post">
+<form class="container" action="/positions" method="post">
+    <h3>Add new position</h3>
     <table>
         <tr>
             <td><label>Name Position</label></td>
