--- a/src/main/resources/templates/product/addProduct.html
+++ b/src/main/resources/templates/product/addProduct.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
-<h3>Add new product</h3>
-<form action="/products" method="post">
+<form class="container" action="/products" method="post">
+    <h3>Add new product</h3>
     <table>
         <tr>
             <td><label>Name Product</label></td>
