--- a/src/main/resources/templates/employee/updateEmployee.html
+++ b/src/main/resources/templates/employee/updateEmployee.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include/head :: head">
-    <title>Add new employee</title>
+    <title>Update employee</title>
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
-<h3>Add new employee</h3>
-<form action="#" th:action="@{/employees/update/{id}(id=${employee.id})}" th:object="${employee}" method="post">
+<form class="container" action="#" th:action="@{/employees/update/{id}(id=${employee.id})}" th:object="${employee}" method="post">
+    <h3>Update employee</h3>
     <label>First Name</label>
     <br>
     <input type="text" name="firstName" th:value="${employee.firstName}"/>
