--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -20,7 +20,7 @@
             <a th:href="@{/}">[[#{menu.message.home}]]</a>
             <a th:href="@{/products}"> | [[#{menu.message.product}]]</a>
             <a th:href="@{/drawings}"> | [[#{menu.message.drawing}]]</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/employees}"> | [[#{menu.message.employee}]]</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/employees}"> | [[#{menu.message.employee}]]</a>
             <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}"> | [[#{menu.message.department}]]</a>
             <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}"> | [[#{menu.message.position}]]</a>
         </div>
